Backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: clock-app-server
spec:
  selector:
    matchLabels:
      app: clock-app-server
  replicas: 2
  template:
    metadata:
      labels:
        app: clock-app-server
    spec:
      containers:
        - name: clock-app-server
          image: wrujel/clock-app-server
          ports:
            - containerPort: 4000
