Backend/k8s/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clock-app-server-service
  namespace: default
spec:
  selector:
    app: clock-app-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
