Backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clock-app-server
spec:
  selector:
    app: clock-app-server
  ports:
    - protocol: TCP
      port: 4000
  type: LoadBalancer
